# wiki

./: README.md  git_intro.md
ROS/: README.md  create_rospy_package.sh
ROS/python_package_template/: CMakeLists.txt  package.xml  setup.py
ROS/python_package_template/launch/: python_package_template.launch
ROS/python_package_template/nodes/: python_node
ROS/python_package_template/scripts/: python_script
ROS/python_package_template/src/python_package_template/: __init__.py  foo.py
files/: .clang-format  LASA IntelliJ IDEA CPP Code Style.xml  clang-format-lasa  clang_format_custom.sublime-settings
