<?xml version="1.0"?>
<package format="2">
  <name>python_package_template</name>
  <version>0.0.0</version>
  <description>The python_package_template package</description>

  <maintainer email="dominic.reber@epfl.ch">Dominic Reber</maintainer>

  <license>BSD</license>

  <author email="dominic.reber@epfl.ch">Dominic Reber</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <depend>rospy</depend>
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>rospy</build_depend> -->
  <!--   <exec_depend>rospy</exec_depend> -->

  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->

</package>